--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,8 @@
-Тест подключения к серверу по IPv6.
+Сделать функции для создания файловых дескрипторов:
+    обработка сигналов
+    пайпы
+    именованные пайпы
+    POSIX-очереди
 
-Тест передачи данных.
+Тест передачи данных для test_loop.
+
