Test data receive via server_loop.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,3 @@
-Сделать функции для создания файловых дескрипторов:
-    POSIX-очереди
-    пайпы
-    именованные пайпы
-
+Немного причесать отладочный вывод.
 Тест передачи данных для test_loop.
 
