Debug output for test.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,12 @@
-Немного причесать отладочный вывод.
-Тест передачи данных для test_loop.
+Сделать логирование.
 
+Немного причесать отладочный вывод.
+
+Комментарии в коде.
+
+Подумать о том, что бы прицепить пользовательские данные к событию.
+Стоит ли их добавить в loop::callback_info или оставить как есть и данные
+можно будет в лямбду запихать?
+Можно попробовать шаблонный параметр.
+
+Подумать над открытой лицезией.
