Custom argument for events. Implemented via templates.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,12 +1,9 @@
+custom data в виде шаблонного параметра.
+
 Сделать логирование.
 
 Немного причесать отладочный вывод.
 
 Комментарии в коде.
-
-Подумать о том, что бы прицепить пользовательские данные к событию.
-Стоит ли их добавить в loop::callback_info или оставить как есть и данные
-можно будет в лямбду запихать?
-Можно попробовать шаблонный параметр.
 
 Подумать над открытой лицезией.
