Move custom argument when event is creating.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,6 @@
-custom data в виде шаблонного параметра.
+event_queue_item с шаблонным параметром.
+Сейчас шаблонный параметр игнорируется и нужен как заглушка.
+Подумать, насчёт передачи параметра.
 
 Сделать логирование.
 
@@ -7,3 +9,5 @@ custom data в виде шаблонного параметра.
 Комментарии в коде.
 
 Подумать над открытой лицезией.
+
+Подумать о документации.
