Server example and bugfix in server_loop.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,3 @@
-Сделать логирование.
+Подумать о смене лицензии на MPL.
 
-Немного причесать отладочный вывод.
-
-Комментарии в коде.
-
-Подумать над открытой лицезией.
-
-Подумать о документации.
+Проверить закрытие клиентского соединения.
